

                              KijiMR Release Notes

Version 1.0.0-rc6
  * KIJIMR-157. Removes --install option from job-history tool.
      Updates job-history.
  * KIJIMR-108. Moves forName methods from KijiMapper, KijiReducer, KijiGatherer, KijiProducer,
      KijiBulkImporter to impl package utility classes.
  * KIJIMR-138. Command-line arguments --start-row and --limit-row understand
      entity IDs.
  * Add KijiTableContext.getEntityIdFactory().
    Deprecates ProducerContext.getEntityId(); use KijiRowData.getEntityId().

Version 1.0.0-rc5
  * Initial release.