@@ -35,7 +35,6 @@ import org.kiji.mapreduce.bulkimport.impl.KijiBulkImporters;
 import org.kiji.mapreduce.output.DirectKijiTableMapReduceJobOutput;
 import org.kiji.mapreduce.output.HFileMapReduceJobOutput;
 import org.kiji.mapreduce.output.impl.KijiTableMapReduceJobOutput;
-import org.kiji.mapreduce.tools.framework.JobIOSpecParseException;
 import org.kiji.mapreduce.tools.framework.JobTool;
 import org.kiji.mapreduce.tools.framework.MapReduceJobInputFactory;
 import org.kiji.mapreduce.tools.framework.MapReduceJobOutputFactory;
@@ -131,7 +130,7 @@ public final class KijiBulkImport extends JobTool<KijiBulkImportJobBuilder> {
   /** {@inheritDoc} */
   @Override
   protected void configure(KijiBulkImportJobBuilder jobBuilder)
-      throws ClassNotFoundException, IOException, JobIOSpecParseException {
+      throws ClassNotFoundException, IOException {
 
     // Resolve job input:
     final MapReduceJobInput input =
